# OpenGL-renderer

./: CMakeLists.txt  README.md
include/: CApplication.h  CCamera.h  CElementBuffer.h  CImageLoader.h  CRenderer.h  CShader.h  CTexture.h  CVertexArray.h  CVertexBuffer.h  CVertexBufferLayout.h  funs.h
src/: CApplication.cpp  CCamera.cpp  CElementBuffer.cpp  CImageLoader.cpp  CMakeLists.txt  CRenderer.cpp  CShader.cpp  CTexture.cpp  CVertexArray.cpp  CVertexBuffer.cpp  CVertexBufferLayout.cpp  funs.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  main.cpp
src/Shaders/: shader.frag  shader.vert
